# algo_trade

./: .gitignore  PRD_NIFTY_Breakout_Trading_System.docx  Shyam_Stratgey_Details.docx  Shyam_strategy.docx  pyproject.toml
config/: default_config.yaml
output/: strategy_comparison.html  strategy_data.json  strategy_description.md  trade_log.csv  trade_log_tuned.csv
scripts/: export_comparison_data.py  fetch_data.py  fetch_options_bulk.py  live_trade.py  paper_trade.py  param_sweep.py  param_sweep2.py  param_sweep3.py  run_backtest.py  run_backtest_full.py  verify_10days.py  verify_single_day.py
src/orb/: __init__.py  config.py  models.py
src/orb/backtest/: broker_sim.py  engine.py  results.py  runner.py
src/orb/data/: cache.py  db.py  instruments.py  kite_auth.py  kite_fetcher.py
src/orb/indicators/: rsi.py  supertrend.py
src/orb/live/: __init__.py  live_session.py  notifier.py  order_manager.py  state.py  ticker.py
src/orb/reports/: charts.py  metrics.py  trade_log.py
src/orb/strategy/: breakout.py  entry.py  exit.py  opening_range.py  position.py  session.py
tests/: test_breakout.py  test_engine.py  test_entry_exit.py  test_indicators.py  test_opening_range.py  test_position.py
tests/fixtures/: sample_day.json
