[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orb-backtest"
version = "0.1.0"
description = "NIFTY 3-Min ORB Options Trading Backtesting System"
requires-python = ">=3.11"
dependencies = [
    "kiteconnect>=5.0.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
